fix(docs): add various content changes

--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/1c-enterprise/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/1c-enterprise/en.mdx
@@ -1,44 +1,17 @@
-<h1 align="center">
-  Medusa – 1C:Enterprise Integration
-</h1>
+# 1C:Enterprise Integration with Medusa
 
-<p align="center">
-Sync products and orders between Medusa and 1C:Enterprise.
-</p>
+Integration plugin for data exchange between Medusa and 1C:Enterprise ERP.
 
-<div align="center">
-  <a href="https://medusajs.com">
-    <img src="https://img.shields.io/badge/Medusa-^2.8.0-blue?logo=medusa" alt="Medusa" />
-  </a>
-  <a href="https://medusajs.com">
-    <img src="https://img.shields.io/badge/Tested_with_Medusa-v2.10.3-green?logo=checkmarx" alt="Medusa" />
-  </a>
-</div>
+> 🚧 Integration is currently under development, see the [Roadmap](#roadmap).
 
-<div align="center">
-  <a href="https://t.me/medusajs_1c">
-    <img src="https://img.shields.io/badge/Telegram-Medusa.js⊷1C_Support_Chat-0088cc?logo=telegram&style=social" alt="Medusa.js⊷1C on Telegram" />
-  </a>
-</div>
+## 💬 1C:Enterprise Plugin Support Chat
 
-<div align="center">
-  <a href="https://t.me/medusajs_chat">
-    <img src="https://img.shields.io/badge/Telegram-Medusa.js_Dev_Community_Chat-0088cc?logo=telegram&style=social" alt="Medusa.js Chat on Telegram" />
-  </a>
-</div>
+Got questions or ideas for new plugin features?  
+Join the Telegram chat – [@medusajs_1c](https://t.me/medusajs_1c)
 
-## Status
+## 👥 Medusa.js Community Chat
 
-🚧 Work in progress, see the [Roadmap](#roadmap).
-A stable release is expected around September.
-
-## 💬 Plugin Support Chat on Telegram
-
-Join the [Medusa.js ⊷ 1C](https://t.me/medusajs_1c) community chat to discuss features and get support.
-
-## 👥 Medusa.js Community Chat on Telegram
-
-Join the [Medusa.js Chat](https://t.me/medusajs_chat) to connect with developers building on Medusa.
+Connect with other Medusa developers on Telegram – [@medusajs_chat](https://t.me/medusajs_chat)
 
 ## Roadmap
 
@@ -51,19 +24,10 @@ Join the [Medusa.js Chat](https://t.me/medusajs_chat) to connect with developers
 - [ ] Admin UI extension for journaling and audit logs
 - [ ] Detailed documentation
 
-## Getting Started
-
-To learn how to install and configure the 1C:Enterprise integration, check out the [Getting Started](./getting-started) guide.
-
-## Prerequisites
-
-- Medusa server v2.8.0 or later
-- Node.js v20 or later
-
 ## Development
 
 Find documentation on bootstrapping a development environment [here](https://github.com/gorgojs/medusa-plugins/tree/main/examples/1c).
 
-## License
+## Getting Started
 
-Licensed under the [MIT License](LICENSE).
+To learn how to install and configure the 1C:Enterprise integration, check out the [Getting Started](1с-enterprise/getting-started) guide.
