--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/1c-enterprise/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/1c-enterprise/ru.mdx
@@ -1,69 +1,33 @@
-<h1 align="center">
-  Medusa – 1C:Enterprise Integration
-</h1>
+# Интеграция 1С:Предприятие с Medusa
 
-<p align="center">
-Sync products and orders between Medusa and 1C:Enterprise.
-</p>
+Плагин интеграции для обмена данными между Medusa и ERP 1С:Предприятие
 
-<div align="center">
-  <a href="https://medusajs.com">
-    <img src="https://img.shields.io/badge/Medusa-^2.8.0-blue?logo=medusa" alt="Medusa" />
-  </a>
-  <a href="https://medusajs.com">
-    <img src="https://img.shields.io/badge/Tested_with_Medusa-v2.10.3-green?logo=checkmarx" alt="Medusa" />
-  </a>
-</div>
+> 🚧 Интеграция в настоящее время находится в разработке, см. [Roadmap](#roadmap).
 
-<div align="center">
-  <a href="https://t.me/medusajs_1c">
-    <img src="https://img.shields.io/badge/Telegram-Medusa.js⊷1C_Support_Chat-0088cc?logo=telegram&style=social" alt="Medusa.js⊷1C on Telegram" />
-  </a>
-</div>
+## 💬 Чат поддержки плагина 1С:Предприятие
 
-<div align="center">
-  <a href="https://t.me/medusajs_chat">
-    <img src="https://img.shields.io/badge/Telegram-Medusa.js_Dev_Community_Chat-0088cc?logo=telegram&style=social" alt="Medusa.js Chat on Telegram" />
-  </a>
-</div>
+Есть вопросы или идеи по новым функциям плагина?  
+Присоединяйтесь к чату в Telegram – [@medusajs_1c](https://t.me/medusajs_1c)
 
-## Status
+## 👥 Чат сообщества Medusa.js
 
-🚧 Work in progress, see the [Roadmap](#roadmap).
-A stable release is expected around September.
-
-## 💬 Plugin Support Chat on Telegram
-
-Join the [Medusa.js ⊷ 1C](https://t.me/medusajs_1c) community chat to discuss features and get support.
-
-## 👥 Medusa.js Community Chat on Telegram
-
-Join the [Medusa.js Chat](https://t.me/medusajs_chat) to connect with developers building on Medusa.
+Общайтесь с другими разработчиками Medusa в Telegram – [@medusajs_chat](https://t.me/medusajs_chat)
 
 ## Roadmap
 
-- [x] Import products from 1C into Medusa (`import.xml`)
-- [x] Import offers from 1C into Medusa (`offers.xml`)
-- [ ] Sync inventory levels and prices between 1C and Medusa
-- [ ] Import orders from 1C into Medusa (`orders.xml`)
-- [ ] Export orders from Medusa to 1C
-- [ ] Admin UI extension for synchronization status and controls
-- [ ] Admin UI extension for journaling and audit logs
-- [ ] Detailed documentation
+- [x] Импорт товаров из 1C в Medusa (`import.xml`)
+- [x] Импорт предложений из 1C в Medusa (`offers.xml`)
+- [ ] Синхронизация остатков и цен между 1C и Medusa
+- [ ] Импорт заказов из 1C в Medusa (`orders.xml`)
+- [ ] Экспорт заказов из Medusa в 1C
+- [ ] Расширение админки для статуса синхронизации и управления
+- [ ] Расширение админки для журналирования и аудита
+- [ ] Подробная документация
 
-## Getting Started
+## Разработка
 
-To learn how to install and configure the 1C:Enterprise integration, check out the [Getting Started](./getting-started) guide.
+Документация по подготовке окружения для разработки доступна [здесь](https://github.com/gorgojs/medusa-plugins/tree/main/examples/1c).
 
-## Prerequisites
+## Начало работы
 
-- Medusa server v2.8.0 or later
-- Node.js v20 or later
-
-## Development
-
-Find documentation on bootstrapping a development environment [here](https://github.com/gorgojs/medusa-plugins/tree/main/examples/1c).
-
-## License
-
-Licensed under the [MIT License](LICENSE).
+Чтобы узнать, как установить и настроить интеграцию с 1C:Предприятие, ознакомьтесь с руководством [Быстрый старт](1с-enterprise/getting-started).
