--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/robokassa/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/robokassa/en.mdx
@@ -1,45 +1,6 @@
-<div align="center">
-  <a href="https://www.medusajs.com">
-    <picture>
-      <source media="(prefers-color-scheme: dark)" srcset="https://github.com/user-attachments/assets/119f3faf-da2e-476e-bf08-6e557de689b6" />
-      <source media="(prefers-color-scheme: light)" srcset="https://github.com/user-attachments/assets/119f3faf-da2e-476e-bf08-6e557de689b6" />
-      <img alt="Medusa-Robokassa logo" src="https://github.com/user-attachments/assets/119f3faf-da2e-476e-bf08-6e557de689b6" height="120" />
-    </picture>
-  </a>
-</div>
+# Robokassa Payments for Medusa
 
-<h1 align="center">
-Robokassa Payments for Medusa
-</h1>
-
-<p align="center">
-  A Medusa plugin that provides Robokassa payments.
-  <br/>
-  <a href="https://github.com/gorgojs/medusa-plugins/blob/HEAD/packages/medusa-payment-robokassa/README.ru.md">Читать README на русском →</a>
-</p>
-
-<br/>
-
-<p align="center">
-  <a href="https://medusajs.com">
-    <img src="https://img.shields.io/badge/Medusa-^2.7.0-blue?logo=medusa" alt="Medusa" />
-  </a>
-  <a href="https://medusajs.com">
-    <img src="https://img.shields.io/badge/Tested_with_Medusa-v2.10.3-green?logo=checkmarx" alt="Medusa" />
-  </a>
-</p>
-
-<p align="center">
-  <a href="https://t.me/medusajs_robokassa">
-    <img src="https://img.shields.io/badge/Telegram-Medusa.js⊷Robokassa_Support_Chat-0088cc?logo=telegram&style=social" alt="Medusa.js⊷Robokassa on Telegram" />
-  </a>
-</p>
-
-<p align="center">
-  <a href="https://t.me/medusajs_chat">
-    <img src="https://img.shields.io/badge/Telegram-Medusa.js_Dev_Community_Chat-0088cc?logo=telegram&style=social" alt="Medusa.js Chat on Telegram" />
-  </a>
-</p>
+A Medusa plugin that provides Robokassa payments.
 
 ## Features
 
@@ -63,16 +24,12 @@ Connect with other Medusa developers on Telegram – [@medusajs_chat](https://t.
 
 ## Getting Started
 
-To learn how to install and configure the Robokassa payment provider, check out the [Getting Started](./getting-started) guide.
+To learn how to install and configure the Robokassa payment provider, check out the [Getting Started](robokassa/getting-started) guide.
 
 ## Storefront Integration
 
-For instructions on how to integrate Robokassa payment provider in a Next.js storefront, see the [Storefront Integration](./storefront-integration) guide.
+For instructions on how to integrate Robokassa payment provider in a Next.js storefront, see the [Storefront Integration](robokassa/storefront-integration) guide.
 
 ## Development
 
 Find documentation on bootstrapping a development environment [here](https://github.com/gorgojs/medusa-plugins/tree/main/examples/payment-robokassa).
-
-## License
-
-Licensed under the [MIT License](LICENSE).
