--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/robokassa/getting-started/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/robokassa/getting-started/ru.mdx
@@ -1,12 +1,12 @@
-# Начало работы с платежами Robokassa
+# Быстрый старт с подключением Робокасса
 
-В этом документе вы узнаете, как установить и настроить платежный провайдер Robokassa для Medusa.
+В этом документе вы узнаете, как установить и настроить платежный провайдер Робокасса для Medusa.
 
 ## Требования
 
 - Medusa v2.7.0 или новее
 - Node.js v20 или новее
-- Аккаунт Robokassa — [зарегистрируйтесь или войдите](https://login.robokassa.ru/reg?promoCode=gorgo)
+- Аккаунт Робокасса — [зарегистрируйтесь или войдите](https://login.robokassa.ru/reg?promoCode=gorgo)
 
 ## Установка
 
@@ -52,7 +52,7 @@ module.exports = defineConfig({
 
 Добавьте следующие переменные окружения: идентификатор магазина `merchantLogin`, алгоритм подписи `hashAlgorithm`, секретные пароли `password1`, `password2`, а также тестовые пароли `testPassword1`, `testPassword2`:
 
-```
+```text
 ROBOKASSA_MERCHANT_LOGIN=test-shop
 ROBOKASSA_HASH_ALGORITHM=md5
 ROBOKASSA_PASSWORD_1=supersecret
@@ -61,19 +61,13 @@ ROBOKASSA_TEST_PASSWORD_1=supersecret
 ROBOKASSA_TEST_PASSWORD_2=supersecret
 ```
 
-> **Важно!** Значение `ROBOKASSA_HASH_ALGORITHM` должно совпадать с настройкой в аккаунте Robokassa и быть одним из: `md5`, `sha1`, `sha256`, `sha384`, `sha512` или `ripemd160` (обратите внимание: для `ripemd160` возможны ошибки на стороне провайдера).
-
-В настройках магазина Robokassa укажите **Метод отправки данных на Result URL** — `GET` или `POST`, и задайте **Result URL** в формате:
-
-```
-https://{YOUR_MEDUSA_DOMAIN}/hooks/payment/robokassa_robokassa
-```
+> **Важно!** Значение `ROBOKASSA_HASH_ALGORITHM` должно совпадать с настройкой в аккаунте Робокасса и быть одним из: `md5`, `sha1`, `sha256`, `sha384`, `sha512` или `ripemd160` (обратите внимание: для `ripemd160` возможны ошибки на стороне провайдера).
 
 ## Параметры провайдера
 
 | Опция            | Описание                                                                 | Обязательный | По умолчанию |
 |------------------|--------------------------------------------------------------------------|-------------|--------------|
-| `merchantLogin`  | Идентификатор магазина Robokassa                                         | Да          | -            |
+| `merchantLogin`  | Идентификатор магазина Робокасса                                         | Да          | -            |
 | `hashAlgorithm`  | Алгоритм подписи: `md5`, `sha1`, `sha256`, `sha384`, `sha512`            | Да          | -            |
 | `password1`      | Технический пароль №1 для расчёта подписи при инициализации платежа      | Да         | -            |
 | `password2`      | Технический пароль №2 для проверки подписи в уведомлениях об оплате      | Да         | -            |
@@ -88,12 +82,12 @@ https://{YOUR_MEDUSA_DOMAIN}/hooks/payment/robokassa_robokassa
 
 ## Настройка вебхуков
 
-Чтобы корректно обрабатывать платежные уведомления от Robokassa, настройте URL вебхука в вашем аккаунте Robokassa следующим образом:
+Чтобы корректно обрабатывать платежные уведомления от Робокасса, настройте URL вебхука в вашем аккаунте Робокасса следующим образом:
 
-В настройках магазина Robokassa укажите **Метод отправки данных на Result URL** — `GET` или `POST`, и задайте **Result URL** в формате:
+В настройках магазина Робокасса укажите **Метод отправки данных на Result URL** — `GET` или `POST`, и задайте **Result URL** в формате:
 
 ```
 https://{YOUR_MEDUSA_DOMAIN}/hooks/payment/robokassa_robokassa
 ```
 
-Robokassa будет отправлять обновления статуса платежей на этот URL, что позволяет Medusa обновлять статус платежа соответствующим образом.
+Робокасса будет отправлять обновления статуса платежей на этот URL, что позволяет Medusa обновлять статус платежа соответствующим образом.
