--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/robokassa/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/robokassa/ru.mdx
@@ -1,49 +1,10 @@
-<div align="center">
-  <a href="https://www.medusajs.com">
-    <picture>
-      <source media="(prefers-color-scheme: dark)" srcset="https://github.com/user-attachments/assets/119f3faf-da2e-476e-bf08-6e557de689b6" />
-      <source media="(prefers-color-scheme: light)" srcset="https://github.com/user-attachments/assets/119f3faf-da2e-476e-bf08-6e557de689b6" />
-      <img alt="Medusa-Robokassa logo" src="https://github.com/user-attachments/assets/119f3faf-da2e-476e-bf08-6e557de689b6" height="120" />
-    </picture>
-  </a>
-</div>
+# Платежи Робокасса для Medusa
 
-<h1 align="center">
-Платежи Robokassa для Medusa
-</h1>
-
-<p align="center">
-  Плагин Medusa для приёма платежей через Robokassa.
-  <br/>
-  <a href="https://github.com/gorgojs/medusa-plugins/blob/HEAD/packages/medusa-payment-robokassa/README.md">Read README in English →</a>
-</p>
-
-<br/>
-
-<p align="center">
-  <a href="https://medusajs.com">
-    <img src="https://img.shields.io/badge/Medusa-^2.7.0-blue?logo=medusa" alt="Medusa" />
-  </a>
-  <a href="https://medusajs.com">
-    <img src="https://img.shields.io/badge/Протестировано_с_Medusa-v2.10.3-green?logo=checkmarx" alt="Medusa" />
-  </a>
-</p>
-
-<p align="center">
-  <a href="https://t.me/medusajs_robokassa">
-    <img src="https://img.shields.io/badge/Telegram-Чат_поддержки_Medusa.js⊷Robokassa-0088cc?logo=telegram&style=social" alt="Чат Medusa.js⊷Robokassa в Telegram" />
-  </a>
-</p>
-
-<p align="center">
-  <a href="https://t.me/medusajs_chat">
-    <img src="https://img.shields.io/badge/Telegram-Чат_dev--сообщества_Medusa.js-0088cc?logo=telegram&style=social" alt="Чат сообщества разработчиков Medusa.js в Telegram" />
-  </a>
-</p>
+Плагин Medusa для приёма платежей через Робокасса.
 
 ## Возможности
 
-- 🔗  **Бесшовная интеграция** с платежной системой Robokassa
+- 🔗  **Бесшовная интеграция** с платежной системой Робокасса
 - 🧾  **Формирование онлайн-чеков** в соответствии с 54-ФЗ
 - 1️⃣  Поддержка **одностадийных** (автосписание) и 2️⃣ **двухстадийных** (авторизация/холдирование) сценариев оплаты
 - 🔔  **Вебхук-уведомления** о статусах платежей в реальном времени
@@ -52,7 +13,7 @@
 - ⚙️  Поддержка **тестового режима** для имитация оплаты без реальных списаний
 - 🔍  **Подробное логирование** для отладки и аудита транзакций
 
-## 💬 Чат поддержки плагина Robokassa
+## 💬 Чат поддержки плагина Робокасса
 
 Есть вопросы или идеи по новым функциям плагина?
 Присоединяйтесь к чату в Telegram – [@medusajs_robokassa](https://t.me/medusajs_robokassa)
@@ -63,11 +24,11 @@
 
 ## Начало работы
 
-Чтобы узнать, как установить и настроить платежный провайдер Robokassa, ознакомьтесь с руководством [Быстрый старт](./getting-started).
+Чтобы узнать, как установить и настроить платежный провайдер Робокасса, ознакомьтесь с руководством [Быстрый старт](robokassa/getting-started).
 
 ## Интеграция с Storefront
 
-Для получения инструкций по интеграции платежного провайдера Robokassa в storefront Next.js смотрите руководство [Интеграция с Storefront](./storefront-integration).
+Для получения инструкций по интеграции платежного провайдера Робокасса в storefront Next.js смотрите руководство [Интеграция с Storefront](robokassa/storefront-integration).
 
 ## Разработка
 
