--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/robokassa/storefront-integration/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/robokassa/storefront-integration/ru.mdx
@@ -1,16 +1,16 @@
-# Интеграция Robokassa с витриной (Storefront)
+# Интеграция Робокасса с витриной магазина (Storefront)
 
-Для интеграции платёжного провайдера Robokassa с storefront на Next.js начните с добавления необходимых UI-компонентов. Таким образом провайдер будет отображаться на странице оформления заказа наряду с другими доступными методами оплаты.
+Для интеграции платёжного провайдера Робокасса с storefront на Next.js начните с добавления необходимых UI-компонентов. Таким образом провайдер будет отображаться на странице оформления заказа наряду с другими доступными методами оплаты.
 
-Когда пользователь выбирает Robokassa, витрина должна вызвать метод `initiatePayment` с нужными параметрами. Это создаст платёжную сессию через API Robokassa и подготовит покупателя к перенаправлению. После этого кнопка *Place Order* должна отправить пользователя на страницу оплаты Robokassa, где он сможет выбрать предпочтительный способ оплаты.
+Когда пользователь выбирает Робокасса, витрина должна вызвать метод `initiatePayment` с нужными параметрами. Это создаст платёжную сессию через API Робокасса и подготовит покупателя к перенаправлению. После этого кнопка *Place Order* должна отправить пользователя на страницу оплаты Робокасса, где он сможет выбрать предпочтительный способ оплаты.
 
-После завершения оплаты Robokassa одновременно отправит вебхук и перенаправит покупателя обратно в витрину. То событие, которое придёт первым, завершит корзину и создаст новый заказ в Medusa.
+После завершения оплаты Робокасса одновременно отправит вебхук и перенаправит покупателя обратно в витрину. То событие, которое придёт первым, завершит корзину и создаст новый заказ в Medusa.
 
 Для запуска на Next.js необходимо внести следующие изменения:
 
 ## 1. Конфигурация платёжного провайдера
 
-Чтобы сделать Robokassa доступным в качестве способа оплаты на странице оформления заказа витрины магазина, необходимо добавить её конфигурацию в маппинг платёжных провайдеров в файле с константами вашего storefront. Этот маппинг определяет как каждый провайдер отображается в интерфейсе.
+Чтобы сделать Робокасса доступным в качестве способа оплаты на странице оформления заказа витрины магазина, необходимо добавить её конфигурацию в маппинг платёжных провайдеров в файле с константами вашего storefront. Этот маппинг определяет как каждый провайдер отображается в интерфейсе.
 
 Откройте [`src/lib/constants.tsx`](https://github.com/gorgojs/medusa-plugins/blob/f2e1073275317a01f1447efe9a87d6bc135c5b61/examples/payment-robokassa/medusa-storefront/src/lib/constants.tsx#L33-L36) и добавьте следующий код:
 
@@ -28,20 +28,20 @@ export const paymentInfoMap: Record<
   }
 }
 
-// Вспомогательная функция для проверки, является ли провайдер Robokassa
+// Вспомогательная функция для проверки, является ли провайдер Робокасса
 export const isRobokassa = (providerId?: string) => {
   return providerId?.startsWith("pp_robokassa")
 }
 ```
 
-Вы расширяете объект `paymentInfoMap`, добавляя запись `pp_robokassa_robokassa`. Эта запись определяет заголовок и иконку, которые будут отображаться для Robokassa на странице оформления заказа.
+Вы расширяете объект `paymentInfoMap`, добавляя запись `pp_robokassa_robokassa`. Эта запись определяет заголовок и иконку, которые будут отображаться для Робокасса на странице оформления заказа.
 
-Вспомогательная функция `isRobokassa` проверяет, принадлежит ли переданный `providerId` к Robokassa.
+Вспомогательная функция `isRobokassa` проверяет, принадлежит ли переданный `providerId` к Робокасса.
 Это используется при рендеринге UI-компонентов, специфичных для конкретного провайдера.
 
 ## 2. Настройки Cookie
 
-При подключении Robokassa настройте политику cookie так, чтобы поддерживались междоменные редиректы. Это нужно для сохранения платёжной сессии при возврате пользователя в магазин.
+При подключении Робокасса настройте политику cookie так, чтобы поддерживались междоменные редиректы. Это нужно для сохранения платёжной сессии при возврате пользователя в магазин.
 
 Откройте [`src/lib/data/cookies.ts`](https://github.com/gorgojs/medusa-plugins/blob/f2e1073275317a01f1447efe9a87d6bc135c5b61/examples/payment-robokassa/medusa-storefront/src/lib/data/cookies.ts#L79) и обновите конфигурацию файлов cookie следующим образом:
 
@@ -58,13 +58,13 @@ export const setCartId = async (cartId: string) => {
 
 Эта вспомогательная функция сохраняет идентификатор корзины в cookie с именем `_medusa_cart_id`.
 
-Опция `sameSite` установлена в значение `lax` вместо `strict`. Это изменение гарантирует, что cookie будет отправляться при кросс-доменных запросах во время процесса редиректа через Robokassa, предотвращая потерю платёжной сессии.
+Опция `sameSite` установлена в значение `lax` вместо `strict`. Это изменение гарантирует, что cookie будет отправляться при кросс-доменных запросах во время процесса редиректа через Робокасса, предотвращая потерю платёжной сессии.
 
 ## 3. Инициализация платёжной сессии
 
-Чтобы перенаправить покупателя в Robokassa, платёжная сессия должна быть корректно инициализирована с обязательными параметрами, включая return URL для обоих случаев: успешной и неуспешной оплаты, язык, email покупателя, а также корзину для формирования онлайн-чеков.
+Чтобы перенаправить покупателя в Робокасса, платёжная сессия должна быть корректно инициализирована с обязательными параметрами, включая return URL для обоих случаев: успешной и неуспешной оплаты, язык, email покупателя, а также корзину для формирования онлайн-чеков.
 
-Откройте [`src/modules/checkout/components/payment/index.tsx`](https://github.com/gorgojs/medusa-plugins/blob/f2e1073275317a01f1447efe9a87d6bc135c5b61/examples/payment-robokassa/medusa-storefront/src/modules/checkout/components/payment/index.tsx#L89-L96) и обновите логику инициализации платежа, включив в нее данные корзины и URL возврата для Robokassa:
+Откройте [`src/modules/checkout/components/payment/index.tsx`](https://github.com/gorgojs/medusa-plugins/blob/f2e1073275317a01f1447efe9a87d6bc135c5b61/examples/payment-robokassa/medusa-storefront/src/modules/checkout/components/payment/index.tsx#L89-L96) и обновите логику инициализации платежа, включив в нее данные корзины и URL возврата для Робокасса:
 
 ![Структура проекта storefront Medusa после обновления файла для компонента оплаты](https://github.com/user-attachments/assets/5c4dfcf9-57e7-48f6-956c-0e0a91ec6c8f)
 
@@ -83,13 +83,13 @@ await initiatePaymentSession(cart, {
 })
 ```
 
-При инициализации платёжной сессии для Robokassa параметры `SuccessUrl2` и `FailUrl2` определяют, куда будет перенаправлен покупатель после попытки оплаты. Оба URL динамически формируются на основе базового URL storefront, идентификатора корзины и выбранного кода страны.
+При инициализации платёжной сессии для Робокасса параметры `SuccessUrl2` и `FailUrl2` определяют, куда будет перенаправлен покупатель после попытки оплаты. Оба URL динамически формируются на основе базового URL storefront, идентификатора корзины и выбранного кода страны.
 
 Объект `cart` включается в данные инициализации для формирования чека в соответствии с Федеральным законом № 54.
 
 ## 4. Компонент кнопки оплаты
 
-В storefront для каждого платёжного провайдера необходим отдельный компонент кнопки оплаты. Он отвечает за обработку оформления заказа после подтверждения пользователем и, используя данные платёжного сеанса, перенаправляет его на страницу оплаты Robokassa.
+В storefront для каждого платёжного провайдера необходим отдельный компонент кнопки оплаты. Он отвечает за обработку оформления заказа после подтверждения пользователем и, используя данные платёжного сеанса, перенаправляет его на страницу оплаты Робокасса.
 
 Откройте [`src/modules/checkout/components/payment-button/index.tsx`](https://github.com/gorgojs/medusa-plugins/blob/f2e1073275317a01f1447efe9a87d6bc135c5b61/examples/payment-robokassa/medusa-storefront/src/modules/checkout/components/payment-button/index.tsx#L163-L211) и добавьте следующий код:
 
@@ -169,7 +169,7 @@ const RobokassaPaymentButton: React.FC<RobokassaPaymentProps> = ({
 }
 ```
 
-Этот компонент находит в активной корзине платёжную сессию Robokassa и читает `data.paymentUrl`. При клике по *Place order* пользователь перенаправляется на этот URL, чтобы завершить оплату на странице Robokassa.
+Этот компонент находит в активной корзине платёжную сессию Робокасса и читает `data.paymentUrl`. При клике по *Place order* пользователь перенаправляется на этот URL, чтобы завершить оплату на странице Робокасса.
 
 Если `paymentUrl` отсутствует, компонент показывает сообщение об ошибке и не выполняет переход. Состояние `isLoading` даёт визуальную обратную связь, пока готовится редирект.
 
@@ -177,7 +177,7 @@ const RobokassaPaymentButton: React.FC<RobokassaPaymentProps> = ({
 
 ## 5. API-роут подтверждения платежа
 
-После того как покупатель завершает оплату на странице Robokassa, он перенаправляется обратно на витрину магазина. Необходимо создать API-роут, который обработает этот callback, проверит статус платежа и завершит корзину.
+После того как покупатель завершает оплату на странице Робокасса, он перенаправляется обратно на витрину магазина. Необходимо создать API-роут, который обработает этот callback, проверит статус платежа и завершит корзину.
 
 Создайте файл [`src/app/api/capture-payment/[cartId]/route.ts`](https://github.com/gorgojs/medusa-plugins/blob/main/examples/payment-robokassa/medusa-storefront/src/app/api/capture-payment/%5BcartId%5D/route.ts) со следующим содержимым:
 
@@ -233,7 +233,7 @@ export async function GET(req: NextRequest, { params }: { params: Params }) {
 }
 ```
 
-Этот API-роут обрабатывает редирект от Robokassa после попытки оплаты. Он получает актуальное состояние корзины, чтобы убедиться, что все изменения, внесённые во время оплаты, были отражены.
+Этот API-роут обрабатывает редирект от Робокасса после попытки оплаты. Он получает актуальное состояние корзины, чтобы убедиться, что все изменения, внесённые во время оплаты, были отражены.
 
 Если в корзине нет связанного идентификатора заказа, обработчик роута пытается оформить заказ. В случае успеха покупатель перенаправляется на страницу подтверждения заказа. Если же при обработке корзины возникла ошибка, покупатель возвращается на страницу оформления заказа с указанием ошибки и может повторить процесс оплаты заказа.
 
