--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/t-kassa/getting-started/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/t-kassa/getting-started/ru.mdx
@@ -1,11 +1,11 @@
-# Начало работы с платежами Т-Касса
+# Быстрый старт с подключением Т-Касса
 
 В этом документе вы узнаете, как установить и настроить платежный провайдер Т-Касса для Medusa.
 
 ## Требования
 
-- Medusa v2.7.0 или выше  
-- Node.js v20 или выше  
+- Medusa v2.7.0 или новее  
+- Node.js v20 или новее  
 - Аккаунт Т-Бизнес с подключённым интернет-эквайрингом Т-Касса – [зарегистрируйтесь или войдите](https://www.tbank.ru/kassa/?utm_source=partners_sme&utm_medium=prt.utl&utm_campaign=business.int_acquiring.7-3S975SBSY&partnerId=7-3S975SBSY&agentId=5-B6HGU9OD&agentSsoId=1316b7dd-3a90-4167-9d35-37910431a19c)
 
 ## Установка
@@ -61,7 +61,7 @@ TKASSA_PASSWORD=supersecret
 
 | Параметр             | Описание                                                                                                                                                                                                                                                                         | Обязательный | По умолчанию |
 | -------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------ | ------------ |
-| `terminalKey`        | Ключ терминала, предоставленный T-Kassa (обязателен для аутентификации)                                                                                                                                                                                                          | Да           | -            |
+| `terminalKey`        | Ключ терминала, предоставленный Т-Касса (обязателен для аутентификации)                                                                                                                                                                                                          | Да           | -            |
 | `password`           | Пароль для подписи запросов (обязателен для аутентификации)                                                                                                                                                                                                                      | Да           | -            |
 | `capture`            | Определяет тип проведения платежа:<br/>- `true` — одностадийная оплата (`O` в API)<br/>- `false` — двухстадийная оплата (`T` в API)                                                                                                                                                | Нет          | `true`       |
 | `useReceipt`         | Включает формирование онлайн-чеков по 54-ФЗ                                                                                                                                                                                                                                      | Нет          | `false`      |
@@ -73,7 +73,7 @@ TKASSA_PASSWORD=supersecret
 
 ## Настройка вебхуков
 
-Чтобы корректно обрабатывать платёжные уведомления от T-Kassa, настройте вебхуки в своём аккаунте T-Business следующим образом:
+Чтобы корректно обрабатывать платёжные уведомления от Т-Касса, настройте вебхуки в своём аккаунте T-Business следующим образом:
 
 1. Перейдите в раздел `Интернет-эквайринг` → `Магазины` → Выберите свой магазин → `Терминалы` → Выберите `Тестовый` или `Рабочий` терминал → Нажмите `Настройки`, чтобы открыть окно настроек.
 
@@ -87,4 +87,4 @@ TKASSA_PASSWORD=supersecret
 
     Замените `{YOUR_MEDUSA_DOMAIN}` на домен вашей витрины Medusa.
 
-> **Внимание!** T-Kassa ожидает сообщение `OK` в ответе, чтобы подтвердить успешную обработку вебхука и избежать повторных уведомлений. В настоящее время Medusa не поддерживает кастомные ответные сообщения вебхуков «из коробки», но сами вебхуки обрабатываются корректно и без этого. Подробнее см. [связанное обсуждение](https://github.com/medusajs/medusa/discussions/12887).
+> **Внимание!** Т-Касса ожидает сообщение `OK` в ответе, чтобы подтвердить успешную обработку вебхука и избежать повторных уведомлений. В настоящее время Medusa не поддерживает кастомные ответные сообщения вебхуков «из коробки», но сами вебхуки обрабатываются корректно и без этого. Подробнее см. [связанное обсуждение](https://github.com/medusajs/medusa/discussions/12887).
