--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/t-kassa/storefront-integration/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/t-kassa/storefront-integration/ru.mdx
@@ -1,5 +1,4 @@
-
-# Интеграция Т-Касса с витриной (Storefront)
+# Интеграция Т-Касса с витриной магазина (Storefront)
 
 Для интеграции платёжного провайдера Т-Касса с storefront на Next.js начните с добавления необходимых UI-компонентов. Таким образом провайдер будет отображаться на странице оформления заказа наряду с другими доступными методами оплаты.
 
@@ -29,7 +28,7 @@ export const paymentInfoMap: Record<
   },
 }
 
-// Вспомогательная функция для проверки, является ли провайдер T-Kassa
+// Вспомогательная функция для проверки, является ли провайдер Т-Касса
 export const isTkassa = (providerId?: string) => {
   return providerId?.startsWith("pp_tkassa")
 }
