--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/en.mdx
@@ -1,45 +1,6 @@
-<div align="center">
-  <a href="https://www.medusajs.com">
-    <picture>
-      <source media="(prefers-color-scheme: dark)" srcset="https://github.com/user-attachments/assets/9a99f9e8-f80e-4411-9bed-6e2032b1ab1c" />
-      <source media="(prefers-color-scheme: light)" srcset="https://github.com/user-attachments/assets/9a99f9e8-f80e-4411-9bed-6e2032b1ab1c" />
-      <img alt="Medusa logo" src="https://github.com/user-attachments/assets/9a99f9e8-f80e-4411-9bed-6e2032b1ab1c" height="120" />
-    </picture>
-  </a>
-</div>
+# YooKassa Payments for Medusa
 
-<h1 align="center">
-YooKassa Payments for Medusa
-</h1>
-
-<p align="center">
-  A Medusa plugin that provides YooKassa payments.
-  <br/>
-  <a href="https://github.com/sergkoudi/medusa-payment-yookassa/blob/HEAD/packages/medusa-payment-yookassa/README.ru.md">Читать README на русском →</a>
-</p>
-
-<br/>
-
-<p align="center">
-  <a href="https://medusajs.com">
-    <img src="https://img.shields.io/badge/Medusa-^2.7.0-blue?logo=medusa" alt="Medusa" />
-  </a>
-  <a href="https://medusajs.com">
-    <img src="https://img.shields.io/badge/Tested_with_Medusa-v2.10.3-green?logo=checkmarx" alt="Medusa" />
-  </a>
-</p>
-
-<p align="center">
-  <a href="https://t.me/medusajs_yookassa">
-    <img src="https://img.shields.io/badge/Telegram-Medusa.js⊷YooKassa_Support_Chat-0088cc?logo=telegram&style=social" alt="Medusa.js⊷YooKassa on Telegram" />
-  </a>
-</p>
-
-<p align="center">
-  <a href="https://t.me/medusajs_chat">
-    <img src="https://img.shields.io/badge/Telegram-Medusa.js_Dev_Community_Chat-0088cc?logo=telegram&style=social" alt="Medusa.js Chat on Telegram" />
-  </a>
-</p>
+A Medusa plugin that provides YooKassa payments.
 
 ## Features
 
@@ -51,27 +12,23 @@ YooKassa Payments for Medusa
 - 🛡  **Webhook verification** for enhanced security
 - 🔍  **Detailed logging** for debugging
 
-## 💬  YooKassa Plugin Support Chat
+## 💬 YooKassa Plugin Support Chat
 
 Got questions or ideas for new plugin features?
 Join the Telegram chat – [@medusajs_yookassa](https://t.me/medusajs_yookassa)
 
-## 👥  Medusa.js Community Chat
+## 👥 Medusa.js Community Chat
 
 Connect with other Medusa developers on Telegram – [@medusajs_chat](https://t.me/medusajs_chat)
 
 ## Getting Started
 
-To learn how to install and configure the YooKassa payment provider, check out the [Getting Started](./getting-started) guide.
+To learn how to install and configure the YooKassa payment provider, check out the [Getting Started](yookassa/getting-started) guide.
 
 ## Storefront Integration
 
-For instructions on how to integrate YooKassa payment provider in a Next.js storefront, see the [Storefront Integration](./storefront-integration) guide.
+For instructions on how to integrate YooKassa payment provider in a Next.js storefront, see the [Storefront Integration](yookassa/storefront-integration) guide.
 
 ## Development
 
 Find documentation on bootstrapping a development environment [here](https://github.com/sergkoudi/medusa-payment-yookassa/tree/main/examples).
-
-## License
-
-Licensed under the [MIT License](LICENSE).
