--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/getting-started/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/getting-started/ru.mdx
@@ -1,12 +1,12 @@
-# Начало работы с платежами YooKassa
+# Быстрый старт с подключением ЮKassa
 
-В этом документе вы узнаете, как установить и настроить платежный провайдер YooKassa для Medusa.
+В этом документе вы узнаете, как установить и настроить платежный провайдер ЮKassa для Medusa.
 
 ## Требования
 
-- Medusa v2.7.0 или выше
-- Node.js v20 или выше
-- Аккаунт YooKassa – [зарегистрируйтесь или войдите](https://yookassa.ru/joinups/?source=ks)
+- Medusa v2.7.0 или новее
+- Node.js v20 или новее
+- Аккаунт ЮKassa – [зарегистрируйтесь или войдите](https://yookassa.ru/joinups/?source=ks)
 
 ## Установка
 
@@ -53,15 +53,9 @@ module.exports = defineConfig({
 
 Добавьте следующие переменные окружения: идентификатор магазина `shopId` и секретный ключ `secretKey`:
 
-```
+```text
 YOOKASSA_SHOP_ID=1234567
 YOOKASSA_SECRET_KEY=live_secret_api_key
-```
-
-Затем настройте URL вебхука для уведомлений от YooKassa [здесь](https://yookassa.ru/my/merchant/integration/http-notifications). URL должен иметь следующий формат:
-
-```
-https://{YOUR_MEDUSA_DOMAIN}/hooks/payment/yookassa_yookassa
 ```
 
 ## Параметры провайдера
@@ -70,7 +64,7 @@ https://{YOUR_MEDUSA_DOMAIN}/hooks/payment/yookassa_yookassa
 | --------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------ | ------------ |
 | `shopId`              | Идентификатор вашего магазина в ЮKassa                                                                                                                                                                                                                                                                                                                                                    | Да           | -            |
 | `secretKey`           | Секретный ключ, который используется для проведения операций через ЮKassa                                                                                                                                                                                                                                                                                                                 | Да           | -            |
-| `paymentDescription`  | Описание платежа по умолчанию, если контекст не указан в YooKassa                                                                                                                                                                                                                                                                                                                         | Нет          | -            |
+| `paymentDescription`  | Описание платежа по умолчанию, если контекст не указан в ЮKassa                                                                                                                                                                                                                                                                                                                         | Нет          | -            |
 | `capture`             | Определяет тип проведения платежа:<br />- `true` — одностадийная оплата<br />- `false` — двухстадийная оплата                                                                                                                                                                                                                                                                                 | Нет          | `true`       |
 | `useReceipt`          | Включает формирование онлайн-чеков по 54-ФЗ                                                                                                                                                                                                                                                                                                                                               | Нет          | `false`      |
 | `useAtolOnlineFFD120` | Включается, если вы используете онлайн-кассу Атол Онлайн, обновленную до ФФД 1.2<br /><br />Применимо только при `useReceipt=true`                                                                                                                                                                                                                                                            | Нет          | `false`      |
@@ -80,15 +74,15 @@ https://{YOUR_MEDUSA_DOMAIN}/hooks/payment/yookassa_yookassa
 
 ## Настройка вебхуков
 
-Чтобы корректно обрабатывать платёжные уведомления от YooKassa, настройте URL вебхука в своём аккаунте YooKassa следующим образом:
+Чтобы корректно обрабатывать платёжные уведомления от ЮKassa, настройте URL вебхука в своём аккаунте ЮKassa следующим образом:
 
-1. Перейдите в личный кабинет YooKassa по адресу [yookassa.ru/my/merchant/integration/http-notifications](https://yookassa.ru/my/merchant/integration/http-notifications)
+1. Перейдите в личный кабинет ЮKassa по адресу [yookassa.ru/my/merchant/integration/http-notifications](https://yookassa.ru/my/merchant/integration/http-notifications)
 2. Добавьте новый URL вебхука в следующем формате:
     ```
     https://{YOUR_MEDUSA_DOMAIN}/hooks/payment/yookassa_yookassa
     ```
     Замените `{YOUR_MEDUSA_DOMAIN}` на домен вашей витрины Medusa.
 
-YooKassa будет отправлять обновления статуса платежей на этот URL, что позволяет Medusa обновлять статус платежа соответствующим образом.
+ЮKassa будет отправлять обновления статуса платежей на этот URL, что позволяет Medusa обновлять статус платежа соответствующим образом.
 
-> **Внимание!** YooKassa ожидает сообщение `OK` в ответе, чтобы подтвердить успешную обработку вебхука. В настоящее время Medusa не поддерживает кастомные ответные сообщения вебхуков «из коробки», но сами вебхуки обрабатываются корректно и без этого.
+> **Внимание!** ЮKassa ожидает сообщение `OK` в ответе, чтобы подтвердить успешную обработку вебхука. В настоящее время Medusa не поддерживает кастомные ответные сообщения вебхуков «из коробки», но сами вебхуки обрабатываются корректно и без этого.
