--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/1c-enterprise/getting-started/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/1c-enterprise/getting-started/ru.mdx
@@ -1,18 +1,13 @@
-# Начало работы с интеграцией 1C:Enterprise
+# Быстрый старт с интеграцией 1С:Предприятие
 
-В этом документе вы узнаете, как установить и настроить плагин интеграции 1C:Enterprise для Medusa.
-
-## Статус
-
-🚧 В разработке, смотрите [Дорожную карту](#roadmap).
-Стабильный релиз ожидается примерно в сентябре.
+В этой документации вы узнаете, как установить и настроить плагин интеграции 1C:Enterprise для Medusa.
 
 ## Требования
 
-- Medusa сервер v2.8.0 или новее
-- Node.js v20 или новее
+- Medusa v2.7.0 или новее  
+- Node.js v20 или новее  
 
-## Установка
+## Installation
 
 ```bash
 yarn add @gorgo/medusa-1c
@@ -22,26 +17,20 @@ npm install @gorgo/medusa-1c
 
 ## Настройка
 
-Добавьте конфигурацию провайдера в файл `medusa-config.js` приложения Medusa Admin:
+Добавьте конфигурацию плагина в `medusa-config.js` вашего приложения Medusa:
 
-```js
+```ts
 # ...
 module.exports = defineConfig({
-  # to be done...
+  # ...
+  plugins: [
+    # ...
+    {
+      resolve: "@gorgo/medusa-1c",
+      options: {}
+    }
+  ],
 })
 ```
 
-## Дорожная карта
-
-- [x] Импорт товаров из 1C в Medusa (`import.xml`)
-- [x] Импорт предложений из 1C в Medusa (`offers.xml`)
-- [ ] Синхронизация уровней запасов и цен между 1C и Medusa
-- [ ] Импорт заказов из 1C в Medusa (`orders.xml`)
-- [ ] Экспорт заказов из Medusa в 1C
-- [ ] Расширение Admin UI для отображения статуса синхронизации и управления
-- [ ] Расширение Admin UI для журналирования и аудита
-- [ ] Подробная документация
-
-## Разработка
-
-Документацию по развертыванию окружения для разработки можно найти [здесь](https://github.com/gorgojs/medusa-plugins/tree/main/examples/1c).
+> 🚧 Интеграция в настоящее время находится в разработке, см. [Roadmap](./#roadmap).
