--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/t-kassa/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/t-kassa/ru.mdx
@@ -1,6 +1,6 @@
-# Платежи T-Kassa для Medusa
+# Платежи Т-Касса для Medusa
 
-Плагин Medusa для приёма платежей через T-Kassa.
+Плагин Medusa для приёма платежей через Т-Касса.
 
 ## Возможности
 
@@ -12,7 +12,7 @@
 - 🛡  **Проверка вебхуков** для обеспечения безопасности
 - 🔍  **Подробное логирование** для отладки
 
-## 💬  Чат поддержки плагина T-Kassa
+## 💬  Чат поддержки плагина Т-Касса
 
 Есть вопросы или идеи по новым функциям плагина?   
 Присоединяйтесь к чату в Telegram – [@medusajs_tkassa](https://t.me/medusajs_tkassa)
@@ -25,6 +25,3 @@
 
 Документацию по развертыванию окружения для разработки можно найти [здесь](https://github.com/gorgojs/medusa-plugins/tree/main/examples/payment-tkassa).
 
-## Лицензия
-
-Распространяется на условиях [лицензии MIT](LICENSE).
