--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/usage/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/usage/ru.mdx
@@ -1,60 +1,5 @@
-# Начало работы с генератором фидов Яндекс.Маркета YML
 
-В этом документе вы узнаете, как установить и настроить генератор фидов Яндекс.Маркета YML для Medusa.
-
-## Требования
-
-- Medusa сервер v2.8.0 или новее
-- Node.js v20 или новее
-
-## Установка
-
-```bash
-yarn add @gorgo/medusa-feed-yandex
-# или
-npm install @gorgo/medusa-feed-yandex
-```
-
-## Настройка
-
-Добавьте конфигурацию провайдера в файл `medusa-config.js` приложения Medusa Admin:
-
-```ts
-# ...
-module.exports = defineConfig({
-  # ...
-  modules: [
-    {
-      resolve: "@gorgo/medusa-feed-yandex/modules/feed",
-    },
-    {
-      resolve: "@medusajs/medusa/file",
-      options: {
-        providers: [
-          {
-            resolve: "@medusajs/medusa/file-local",
-            id: "local",
-            options: {
-              upload_dir: "static",
-              backend_url: "http://localhost:9000/static"
-            },
-          },
-        ],
-      },
-    },
-  ],
-  plugins: [
-    {
-      resolve: "@gorgo/medusa-feed-yandex",
-      options: {}
-    }
-  ],
-})
-```
-
-> Плагин в настоящее время тестировался с локальным файловым модулем Medusa (`file-local`) и сохраняет сгенерированные XML-фиды в локальный статический каталог.
-
-## Использование
+# Использование
 
 Откройте панель администратора Medusa и перейдите в раздел **Настройки** -> **Фиды** в разделе Расширения — здесь доступен интерфейс плагина.
 
@@ -132,30 +77,4 @@ http://{YOUR_MEDUSA_DOMAIN}/feeds/{ID}/{FILE_NAME}.xml
     </offers>
   </shop>
 </yml_catalog>
-```
-
-## Тестирование
-
-Для запуска тестов перейдите в каталог `examples/feed-yandex/medusa`:
-
-```bash
-cd examples/feed-yandex/medusa
-```
-
-Убедитесь, что в вашем файле `.env.test` содержатся следующие переменные: `DB_USERNAME`, `DB_PASSWORD`:
-
-```bash
-cp .env.test.example .env.test
-```
-
-Затем запустите тесты:
-
-```bash
-# Запустить тесты модуля
-# Они проверяют внутреннюю логику, такую как сервисы и модели
-yarn test:integration:modules
-
-# Запустить интеграционные тесты
-# Интеграционные тесты включают тесты для API-маршрутов и рабочих процессов
-yarn test:integration:http
 ```
