--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/ru.mdx
@@ -1,49 +1,10 @@
-<div align="center">
-  <a href="https://www.medusajs.com">
-    <picture>
-      <source media="(prefers-color-scheme: dark)" srcset="https://github.com/user-attachments/assets/9a99f9e8-f80e-4411-9bed-6e2032b1ab1c" />
-      <source media="(prefers-color-scheme: light)" srcset="https://github.com/user-attachments/assets/9a99f9e8-f80e-4411-9bed-6e2032b1ab1c" />
-      <img alt="Medusa logo" src="https://github.com/user-attachments/assets/9a99f9e8-f80e-4411-9bed-6e2032b1ab1c" height="120" />
-    </picture>
-  </a>
-</div>
+# Платежи ЮKassa для Medusa
 
-<h1 align="center">
-Платежи YooKassa для Medusa
-</h1>
-
-<p align="center">
-  Плагин Medusa для приёма платежей через YooKassa.
-  <br/>
-  <a href="https://github.com/sergkoudi/medusa-payment-yookassa/blob/HEAD/packages/medusa-payment-yookassa/README.md">Read README in English →</a>
-</p>
-
-<br/>
-
-<p align="center">
-  <a href="https://medusajs.com">
-    <img src="https://img.shields.io/badge/Medusa-^2.7.0-blue?logo=medusa" alt="Medusa" />
-  </a>
-  <a href="https://medusajs.com">
-    <img src="https://img.shields.io/badge/Протестировано_с_Medusa-v2.10.3-green?logo=checkmarx" alt="Medusa" />
-  </a>
-</p>
-
-<p align="center">
-  <a href="https://t.me/medusajs_yookassa">
-    <img src="https://img.shields.io/badge/Telegram-Чат_поддержки_Medusa.js⊷YooKassa-0088cc?logo=telegram&style=social" alt="Чат Medusa.js⊷YooKassa в Telegram" />
-  </a>
-</p>
-
-<p align="center">
-  <a href="https://t.me/medusajs_chat">
-    <img src="https://img.shields.io/badge/Telegram-Чат_dev--сообщества_Medusa.js-0088cc?logo=telegram&style=social" alt="Чат сообщества разработчиков Medusa.js в Telegram" />
-  </a>
-</p>
+Плагин Medusa для приёма платежей через ЮKassa.
 
 ## Возможности
 
-- 🔗  **Бесшовная интеграция** с платёжной системой YooKassa
+- 🔗  **Бесшовная интеграция** с платёжной системой ЮKassa
 - 🧾  **Формирование онлайн-чеков** в соответствии с 54-ФЗ
 - 1️⃣  **Одностадийные** (автосписание) и  2️⃣ **двухстадийные** (авторизация/холдирование) сценарии оплаты
 - 🔄  **Возвраты и отмена заказов**
@@ -51,27 +12,23 @@
 - 🛡  **Проверка вебхуков** для обеспечения безопасности
 - 🔍  **Подробное логирование** для отладки
 
-## 💬  Чат поддержки плагина YooKassa
+## 💬 Чат поддержки плагина ЮKassa
 
 Есть вопросы или идеи по новым функциям плагина?
 Присоединяйтесь к чату в Telegram – [@medusajs_yookassa](https://t.me/medusajs_yookassa)
 
-## 👥  Чат сообщества Medusa.js
+## 👥 Чат сообщества Medusa.js
 
 Общайтесь в Telegram с другими разработчиками Medusa – [@medusajs_chat](https://t.me/medusajs_chat)
 
 ## Начало работы
 
-Чтобы узнать, как установить и настроить платежный провайдер YooKassa, ознакомьтесь с руководством [Быстрый старт](./getting-started).
+Чтобы узнать, как установить и настроить платежный провайдер ЮKassa, ознакомьтесь с руководством [Быстрый старт](yookassa/getting-started).
 
 ## Интеграция с Storefront
 
-Для получения инструкций по интеграции платежного провайдера YooKassa в storefront Next.js смотрите руководство [Интеграция с Storefront](./storefront-integration).
+Для получения инструкций по интеграции платежного провайдера ЮKassa в storefront Next.js смотрите руководство [Интеграция с Storefront](yookassa/storefront-integration).
 
 ## Разработка
 
 Документацию по развертыванию окружения для разработки можно найти [здесь](https://github.com/sergkoudi/medusa-payment-yookassa/tree/main/examples).
-
-## Лицензия
-
-Распространяется на условиях [лицензии MIT](LICENSE).
