--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/storefront-integration/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/storefront-integration/ru.mdx
@@ -1,14 +1,14 @@
-# Интеграция YooKassa с витриной (Storefront)
+# Интеграция ЮKassa с витриной магазина (Storefront)
 
-Для интеграции платёжного провайдера YooKassa с storefront на Next.js начните с добавления необходимых UI-компонентов. Таким образом провайдер будет отображаться на странице оформления заказа наряду с другими доступными методами оплаты.
+Для интеграции платёжного провайдера ЮKassa с storefront на Next.js начните с добавления необходимых UI-компонентов. Таким образом провайдер будет отображаться на странице оформления заказа наряду с другими доступными методами оплаты.
 
-Когда пользователь выбирает YooKassa, витрина должна вызвать метод `initiatePayment` с нужными параметрами. Это создаст платёжную сессию через API YooKassa и подготовит покупателя к перенаправлению. После этого кнопка *Place Order* должна отправить пользователя на страницу оплаты YooKassa, где он сможет выбрать предпочтительный способ оплаты.
+Когда пользователь выбирает ЮKassa, витрина должна вызвать метод `initiatePayment` с нужными параметрами. Это создаст платёжную сессию через API ЮKassa и подготовит покупателя к перенаправлению. После этого кнопка *Place Order* должна отправить пользователя на страницу оплаты ЮKassa, где он сможет выбрать предпочтительный способ оплаты.
 
-После завершения оплаты YooKassa одновременно отправит вебхук и перенаправит покупателя обратно в витрину. То событие, которое придёт первым, завершит корзину и создаст новый заказ в Medusa.
+После завершения оплаты ЮKassa одновременно отправит вебхук и перенаправит покупателя обратно в витрину. То событие, которое придёт первым, завершит корзину и создаст новый заказ в Medusa.
 
 ## 1. Конфигурация платежного провайдера
 
-Чтобы сделать YooKassa доступным в качестве способа оплаты на странице оформления заказа витрины магазина, необходимо добавить её конфигурацию в маппинг платёжных провайдеров в файле с константами вашего storefront. Этот маппинг определяет как каждый провайдер отображается в интерфейсе.
+Чтобы сделать ЮKassa доступным в качестве способа оплаты на странице оформления заказа витрины магазина, необходимо добавить её конфигурацию в маппинг платёжных провайдеров в файле с константами вашего storefront. Этот маппинг определяет как каждый провайдер отображается в интерфейсе.
 
 Откройте [`src/lib/constants.tsx`](https://github.com/sergkoudi/medusa-payment-yookassa/blob/bce2e01d8932b3c09b66a3a1b06aa1d5c4cfc445/examples/medusa-storefront/src/lib/constants.tsx#L33-L36) и добавьте следующий код:
 
@@ -26,20 +26,20 @@ export const paymentInfoMap: Record<
   }
 }
 
-// Вспомогательная функция для проверки, является ли провайдер YooKassa
+// Вспомогательная функция для проверки, является ли провайдер ЮKassa
 export const isYookassa = (providerId?: string) => {
   return providerId?.startsWith("pp_yookassa")
 }
 ```
 
-Вы расширяете объект `paymentInfoMap`, добавляя в него запись `pp_yookassa_yookassa`. Эта запись определяет заголовок и иконку, которые будут отображаться для YooKassa на странице оформления заказа.
+Вы расширяете объект `paymentInfoMap`, добавляя в него запись `pp_yookassa_yookassa`. Эта запись определяет заголовок и иконку, которые будут отображаться для ЮKassa на странице оформления заказа.
 
-Вспомогательная функция `isYookassa` проверяет, принадлежит ли переданный `providerId` к YooKassa.
+Вспомогательная функция `isYookassa` проверяет, принадлежит ли переданный `providerId` к ЮKassa.
 Это используется при рендеринге UI-компонентов, специфичных для конкретного провайдера.
 
 ## 2. Настройки Cookie
 
-При подключении YooKassa настройте политику cookie так, чтобы поддерживались междоменные редиректы. Это нужно для сохранения платёжной сессии при возврате пользователя в магазин.
+При подключении ЮKassa настройте политику cookie так, чтобы поддерживались междоменные редиректы. Это нужно для сохранения платёжной сессии при возврате пользователя в магазин.
 
 Откройте [`src/lib/data/cookies.ts`](https://github.com/sergkoudi/medusa-payment-yookassa/blob/bce2e01d8932b3c09b66a3a1b06aa1d5c4cfc445/examples/medusa-storefront/src/lib/data/cookies.ts#L75) и обновите конфигурацию файлов cookie следующим образом:
 
@@ -56,13 +56,13 @@ export const setCartId = async (cartId: string) => {
 
 Эта вспомогательная функция сохраняет идентификатор корзины в cookie с именем `_medusa_cart_id`.
 
-Опция `sameSite` установлена в значение `lax` вместо `strict`. Это изменение гарантирует, что cookie будет отправляться при кросс-доменных запросах во время процесса редиректа через YooKassa, предотвращая потерю платёжной сессии.
+Опция `sameSite` установлена в значение `lax` вместо `strict`. Это изменение гарантирует, что cookie будет отправляться при кросс-доменных запросах во время процесса редиректа через ЮKassa, предотвращая потерю платёжной сессии.
 
 ## 3. Инициализация платёжной сессии
 
-Чтобы перенаправить покупателя в YooKassa, платёжная сессия должна быть корректно инициализирована с необходимыми параметрами, включая return URL после оплаты и корзину для формирования онлайн-чеков.
+Чтобы перенаправить покупателя в ЮKassa, платёжная сессия должна быть корректно инициализирована с необходимыми параметрами, включая return URL после оплаты и корзину для формирования онлайн-чеков.
 
-Откройте [`src/modules/checkout/components/payment/index.tsx`](https://github.com/sergkoudi/medusa-payment-yookassa/blob/main/examples/medusa-storefront/src/modules/checkout/components/payment/index.tsx#L87-L96) и обновите логику инициализации платежа, включив в нее данные корзины и URL возврата для YooKassa:
+Откройте [`src/modules/checkout/components/payment/index.tsx`](https://github.com/sergkoudi/medusa-payment-yookassa/blob/main/examples/medusa-storefront/src/modules/checkout/components/payment/index.tsx#L87-L96) и обновите логику инициализации платежа, включив в нее данные корзины и URL возврата для ЮKassa:
 
 ![Directory structure in the Medusa Storefront after updating the file for payment component](https://github.com/user-attachments/assets/5c4dfcf9-57e7-48f6-956c-0e0a91ec6c8f)
 
@@ -79,7 +79,7 @@ await initiatePaymentSession(cart, {
 })
 ```
 
-При инициировании платёжной сессии для YooKassa передайте объект `confirmation` с `type: "redirect"` и `return_url`. Позже YooKassa предоставит `confirmation_url`, на которое клиент должен быть перенаправлен.
+При инициировании платёжной сессии для ЮKassa передайте объект `confirmation` с `type: "redirect"` и `return_url`. Позже ЮKassa предоставит `confirmation_url`, на которое клиент должен быть перенаправлен.
 
 Параметр `return_url` указывает на конечную точку захвата вашего магазина и используется как для успешных, так и для неудачных попыток оплаты.
 
@@ -87,7 +87,7 @@ await initiatePaymentSession(cart, {
 
 ## 4. Компонент кнопки оплаты
 
-В storefront для каждого платёжного провайдера необходим отдельный компонент кнопки оплаты. Он отвечает за обработку оформления заказа после подтверждения пользователем и, используя данные платёжного сеанса, перенаправляет его на страницу оплаты YooKassa.
+В storefront для каждого платёжного провайдера необходим отдельный компонент кнопки оплаты. Он отвечает за обработку оформления заказа после подтверждения пользователем и, используя данные платёжного сеанса, перенаправляет его на страницу оплаты ЮKassa.
 
 Откройте [`src/modules/checkout/components/payment-button/index.tsx`](https://github.com/sergkoudi/medusa-payment-yookassa/blob/bce2e01d8932b3c09b66a3a1b06aa1d5c4cfc445/examples/medusa-storefront/src/modules/checkout/components/payment-button/index.tsx#L205-L247) и добавьте следующий код:
 
@@ -161,7 +161,7 @@ const YookassaPaymentButton = ({
 }
 ```
 
-Этот компонент находит `payment_session` YooKassa в активной корзине и извлекает значение `data.confirmation.confirmation_url`.  Когда пользователь нажимает кнопку *Place an order*, он перенаправляется на этот URL для завершения оплаты на странице YooKassa.
+Этот компонент находит `payment_session` ЮKassa в активной корзине и извлекает значение `data.confirmation.confirmation_url`.  Когда пользователь нажимает кнопку *Place an order*, он перенаправляется на этот URL для завершения оплаты на странице ЮKassa.
 
 Если `confirmation_url` отсутствует, компонент отображает сообщение об ошибке вместо продолжения процесса.   Состояние `isLoading` обеспечивает визуальную обратную связь во время подготовки перенаправления.
 
@@ -169,7 +169,7 @@ const YookassaPaymentButton = ({
 
 ## 5. API-роут подтверждения платежа
 
-После того как покупатель завершает оплату на странице YooKassa, он перенаправляется обратно на витрину магазина. Необходимо создать API-роут, который обработает этот callback, проверит статус платежа и завершит корзину.
+После того как покупатель завершает оплату на странице ЮKassa, он перенаправляется обратно на витрину магазина. Необходимо создать API-роут, который обработает этот callback, проверит статус платежа и завершит корзину.
 
 Создайте файл [`src/app/api/capture-payment/[cartId]/route.ts`](https://github.com/sergkoudi/medusa-payment-yookassa/blob/main/examples/medusa-storefront/src/app/api/capture-payment/%5BcartId%5D/route.ts)  со следующим содержимым:
 
@@ -225,7 +225,7 @@ export async function GET(req: NextRequest, { params }: { params: Params }) {
 }
 ```
 
-Этот API-роут обрабатывает редирект от YooKassa после попытки оплаты. Он получает актуальное состояние корзины, чтобы убедиться, что все изменения, внесённые во время оплаты, были отражены.
+Этот API-роут обрабатывает редирект от ЮKassa после попытки оплаты. Он получает актуальное состояние корзины, чтобы убедиться, что все изменения, внесённые во время оплаты, были отражены.
 
 Если в корзине нет связанного идентификатора заказа, обработчик роута пытается оформить заказ. В случае успеха покупатель перенаправляется на страницу подтверждения заказа. Если же при обработке корзины возникла ошибка, покупатель возвращается на страницу оформления заказа с указанием ошибки и может повторить процесс оплаты заказа.
 
