--- a/www/docs/src/app/[locale]/(docs)/tools/create-medusa-plugin/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/tools/create-medusa-plugin/en.mdx
@@ -1,15 +1,6 @@
-<p align="center">
-  <a href="https://www.medusajs.com">
-    <img alt="Medusa" src="https://user-images.githubusercontent.com/7554214/153162406-bf8fd16f-aa98-4604-b87b-e13ab4baf604.png" width="100" />
-  </a>
-</p>
-<h1 align="center">
-  create-medusa-plugin
-</h1>
+# create-medusa-plugin
 
-<p align="center">
-  A CLI tool to quickly scaffold a Medusa plugin and example projects in a ready-to-develop monorepo structure.
-</p>
+A CLI tool to quickly scaffold a Medusa plugin and example projects in a ready-to-develop monorepo structure.
 
 ## Usage
 
@@ -87,7 +78,3 @@ Replace `[plugin-name]` with your desired plugin name.
       ├── package.json
       └── README.md
   ```
-
-## License
-
-Licensed under the [MIT License](LICENSE).
